# spendwhy

./: .gitattributes  .metadata  ARCHITECTURE_DESIGN.md  CONTRIBUTING.md  EXCEPTIONS.md  Flutter_Rust工程手册.md  LICENSE  README.md  SECURITY.md  analysis_options.yaml  copy.md  doctor.ps1  pubspec.yaml  rust-toolchain.toml
.github/workflows/: archforge-ci.yml  ci.yml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
archforge/: .gitignore  ARCHITECTURE_INVARIANTS.md  Cargo.toml  README.md  ROADMAP.md  deny.toml
archforge/app-auth/: Cargo.toml
archforge/app-auth/src/: lib.rs  password.rs
archforge/app-notes/: Cargo.toml
archforge/app-notes/src/: lib.rs
archforge/conformance/: Cargo.toml
archforge/conformance/src/: lib.rs  notes.rs
archforge/contract-auth/: Cargo.toml
archforge/contract-auth/.public-api/: api.txt
archforge/contract-auth/src/: commands.rs  events.rs  lib.rs  port.rs  types.rs
archforge/contract-notes/: Cargo.toml
archforge/contract-notes/src/: commands.rs  events.rs  lib.rs  port.rs  types.rs
archforge/domain-auth/: Cargo.toml
archforge/domain-auth/src/: lib.rs  user.rs
archforge/domain-notes/: Cargo.toml
archforge/domain-notes/src/: lib.rs  note.rs
archforge/examples/auth-cli/: Cargo.toml
archforge/examples/auth-cli/src/: main.rs
archforge/examples/notes-cli/: Cargo.toml
archforge/examples/notes-cli/src/: main.rs
archforge/ffi/: Cargo.toml
archforge/ffi/.public-api/: api.txt
archforge/ffi/src/: guard.rs  lib.rs  reporter.rs  wire.rs
archforge/ffi/tests/: ffi_boundary.rs
archforge/infra-auth-jsonfile/: Cargo.toml
archforge/infra-auth-jsonfile/src/: lib.rs
archforge/infra-auth-memory/: Cargo.toml
archforge/infra-auth-memory/src/: lib.rs
archforge/infra-notes-memory/: Cargo.toml
archforge/infra-notes-memory/src/: lib.rs
archforge/kernel/: Cargo.toml
archforge/kernel/.public-api/: api.txt
archforge/kernel/src/: capability.rs  clock.rs  context.rs  error.rs  event.rs  lib.rs  newtype.rs  time.rs
archforge/scripts/: check-invariants.ps1  check-public-api.ps1
docs/adr/: 0001-state-and-data-boundary.md  0002-content-encryption.md  0003-value-objects.md  0004-persistence-normalization.md  0005-domain-events.md
docs/ffi/: README.md  decision-tree.md  error-contract.md
docs/storage/: README.md  data-shapes.md  decision-tree.md  error-contract.md  pitfalls.md
docs/transport/: README.md  data-shapes.md  decision-tree.md  error-contract.md  pitfalls.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  main.dart
lib/archforge/: archforge.dart  wire_error.dart
lib/data/: database.dart  domain_event.dart  fragment_repository.dart
lib/i18n/: strings.dart
lib/models/: enums.dart  fragment.dart  recovery.dart
lib/pages/: detail_page.dart  growth_page.dart  home_page.dart  onboarding_page.dart  record_page.dart  safety_resources_page.dart  settings_page.dart
lib/services/: app_settings.dart  rust_backend.dart  safety_classifier.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: dto.dart  error.dart  fade.dart  recovery.dart  view.dart
lib/src/rust/api/storage/: common.dart  pattern_a_memory.dart  pattern_b_atomic_file.dart  pattern_c_blob.dart  pattern_d_snapshot.dart  pattern_e_event_log.dart  pattern_f_ordered_kv.dart  pattern_g_settings.dart  pattern_h_persistent_cache.dart  pattern_i_encryption.dart  pattern_j_backup.dart
lib/src/rust/api/transport/: common.dart  pattern_a_sync.dart  pattern_b_async.dart  pattern_c_stream.dart  pattern_d_cancel.dart  pattern_e_progress.dart  pattern_f_opaque.dart  pattern_g_bytes.dart  pattern_h_duplex.dart  pattern_i_event_bus.dart  pattern_q_mock.dart  (+10 more)
lib/state/: fragments_provider.dart
lib/storage/: backfill.dart  cache_combinator.dart  error_contract.dart  migration.dart  outbox.dart  secure_storage.dart  soft_delete.dart  sql.dart  storage.dart  tenant.dart
lib/theme/: app_colors.dart  app_theme.dart  app_typography.dart
lib/transport/: coalescing.dart  error_contract.dart  event_bus.dart  isolate.dart  mock.dart  pool.dart  request_context.dart  retry.dart  transport.dart
lib/utils/: date_utils.dart
lib/widgets/: fragment_item.dart  grain_background.dart  growth_painter.dart  intensity_picker.dart  recovery_dialog.dart  tag_picker.dart  underline_button.dart
rust/: Cargo.toml
rust/src/: error.rs  frb_generated.rs  lib.rs
rust/src/api/: dto.rs  error.rs  fade.rs  mod.rs  recovery.rs  simple.rs  view.rs
rust/src/api/storage/: common.rs  mod.rs  pattern_a_memory.rs  pattern_b_atomic_file.rs  pattern_c_blob.rs  pattern_d_snapshot.rs  pattern_e_event_log.rs  pattern_f_ordered_kv.rs  pattern_g_settings.rs  pattern_h_persistent_cache.rs  pattern_i_encryption.rs  pattern_j_backup.rs
rust/src/api/transport/: common.rs  mod.rs  pattern_a_sync.rs  pattern_b_async.rs  pattern_c_stream.rs  pattern_d_cancel.rs  pattern_e_progress.rs  pattern_f_opaque.rs  pattern_g_bytes.rs  pattern_h_duplex.rs  pattern_i_event_bus.rs  pattern_k_pagination.rs  pattern_l_idempotent.rs  pattern_m_callback.rs  pattern_n_semaphore.rs  pattern_p_singleton.rs  pattern_q_mock.rs  pattern_r_json.rs  pattern_s_file_handoff.rs  pattern_t_panic_safety.rs  pattern_u_structured.rs  pattern_v_request_meta.rs
rust/src/application/: mod.rs  recovery.rs  view.rs
rust/src/domain/: fade.rs  fragment.rs  mod.rs  recovery.rs  value.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_fragments.podspec
test/: emotional_safety_classifier_test.dart  safety_classifier_test.dart
test/archforge/: wire_error_test.dart
test/data/: repository_contract_test.dart
test/fakes/: in_memory_fragment_repository.dart
test/models/: fragment_test.dart  recovery_test.dart
test/state/: fragments_provider_test.dart
test/storage/: crypto_test.dart  helpers_test.dart
test/transport/: dart_helpers_test.dart  error_contract_test.dart  request_context_test.dart
(+1 files in other folders)
