[workspace]
resolver = "2"
members = [
    "kernel",
    "conformance",
    "contract-auth",
    "domain-auth",
    "app-auth",
    "infra-auth-memory",
    "infra-auth-jsonfile",
    "examples/auth-cli",
]

# Pin shared dependencies once for the whole workspace. Member crates inherit
# via `workspace = true` so version drift across layers becomes impossible.
[workspace.package]
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = ["ArchForge Contributors"]
repository = "https://github.com/jusu2/spendwhy"
publish = false

[workspace.dependencies]
# Kernel only — no specific tech leak.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"

# Async runtime — used by adapters and examples only, not by kernel/contract.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "io-util", "time"] }
futures = "0.3"

# Adapter-only.
dashmap = "5"

# Test infra.
proptest = "1"
tempfile = "3"
anyhow = "1"

# Internal members — referenced by other members via workspace path.
archforge-kernel              = { path = "kernel" }
archforge-conformance         = { path = "conformance" }
archforge-contract-auth       = { path = "contract-auth" }
archforge-domain-auth         = { path = "domain-auth" }
archforge-app-auth            = { path = "app-auth" }
archforge-infra-auth-memory   = { path = "infra-auth-memory" }
archforge-infra-auth-jsonfile = { path = "infra-auth-jsonfile" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
