[package]
name = "rust_lib_fragments"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
anyhow = "1"
tokio = { version = "1", features = ["sync", "time", "fs", "rt", "macros", "io-util"] }
sha2 = "0.10"
futures = "0.3"
sled = "0.34"
aes-gcm = "0.10"
base64 = "0.22"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
