[package]
name = "archforge-contract-auth"
version = "0.1.0"
description = "Auth bounded-context contract: DTOs, commands, queries, events, port traits."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[dependencies]
archforge-kernel = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
