[package]
name = "archforge-domain-notes"
version = "0.1.0"
description = "Notes bounded-context rich domain model (Always-Valid). Stays inside this crate."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[dependencies]
archforge-kernel = { workspace = true }
archforge-contract-notes = { workspace = true }
