[package]
name = "archforge-infra-auth-jsonfile"
version = "0.1.0"
description = "Tokio + JSON-file adapter for auth ports. Zero native deps, cross-platform."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[dependencies]
archforge-kernel = { workspace = true }
archforge-contract-auth = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
archforge-conformance = { workspace = true }
tempfile = { workspace = true }
