[package]
name = "archforge-kernel"
version = "0.1.0"
description = "Immutable primitives at the root of the ArchForge dependency graph."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unused_must_use = "deny"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
