[package]
name = "auth-cli"
version = "0.1.0"
description = "End-to-end demo: wires kernel + contract + domain + app + chosen adapter."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[lints.rust]
unsafe_code = "forbid"

[features]
# Exactly one backend must be enabled at build time. Build fails clearly if
# both or neither are set.
default = ["memory-backend"]
memory-backend = []
jsonfile-backend = ["dep:archforge-infra-auth-jsonfile"]

[dependencies]
archforge-kernel = { workspace = true }
archforge-contract-auth = { workspace = true }
archforge-app-auth = { workspace = true }
archforge-infra-auth-memory   = { workspace = true }
archforge-infra-auth-jsonfile = { workspace = true, optional = true }

tokio = { workspace = true }
anyhow = { workspace = true }
