[package]
name = "notes-cli"
version = "0.1.0"
description = "End-to-end demo: 用 notes 切片演示 contract + domain + app + 内存适配器的拼装。"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[lints.rust]
unsafe_code = "forbid"

[dependencies]
archforge-kernel = { workspace = true }
archforge-contract-notes = { workspace = true }
archforge-app-notes = { workspace = true }
archforge-infra-notes-memory = { workspace = true }

tokio = { workspace = true }
anyhow = { workspace = true }
